# TCP-Chat_Application-cpp

./: LICENSE  README.md  main_client.cpp  main_server.cpp
TCP-ChatGUI/: CMakeLists.txt  client.cpp  client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
